# RAGBot

./: .gitignore  README.md  flowers_ui.py  pipeline.py  project_description.md  pyproject.toml  requirements.txt
notebooks/: flowers_captions.ipynb  flowers_clusters.ipynb  flowers_nearest_neighbors.ipynb  image_paths.txt
src/: flowers_theme_ui.py  flowers_ui.py
